# launchstack

./: Install_Prometheus_Grafana.md  README.md  langfuse-secrets.yaml  langfuse-values.yaml  langfuse.md  monitoring.md
1_OCI_Resources/: README.md  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
2_Prometheus+Grafana/: README.md
3_Langfuse/: README.md  langfuse-secrets.yaml
4_Aegra/: README.md
5_AgentChatUI/: README.md
stack-agent-manager/: .gitignore  CONTRIBUTING.md  README.md  aegra.json  auth.py  docker-compose.yml  pyproject.toml
stack-agent-manager/backend/: .env.example  Dockerfile  pyproject.toml  test_tmp.py
stack-agent-manager/backend/.kube/: config
stack-agent-manager/backend/alembic/: env.py
stack-agent-manager/backend/alembic/versions/: 001_initial.py  002_add_namespace_to_stacks.py  003_add_agent_deployment_fields.py  004_add_status_to_stacks.py  005_add_graph_id_to_agents.py
stack-agent-manager/backend/app/: config.py  database.py  dependencies.py  main.py
stack-agent-manager/backend/app/models/: __init__.py  agent.py  stack.py  user.py
stack-agent-manager/backend/app/routers/: agents.py  auth.py  stacks.py
stack-agent-manager/backend/app/schemas/: __init__.py  agent.py  stack.py  user.py
stack-agent-manager/backend/app/services/: agent.py  auth.py  stack.py
stack-agent-manager/backend/app/utils/: aegra_api.py  aegra_json.py  exceptions.py  filesystem.py  k8s.py  k8s_deploy.py  security.py
stack-agent-manager/backend/tests/: conftest.py  test_agents.py  test_auth.py  test_stacks.py
(+155 files in other folders)
